[tool.poetry]
name = "udacity-data-modeling-with-postgres"
version = "0.1.0"
description = ""
authors = ["Lui Pillmann <lui.pillmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
