[tool.poetry]
name = "udacity-data-modeling-with-postgres"
version = "0.1.0"
description = ""
authors = ["Lui Pillmann <lui.pillmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
psycopg2 = "^2.8.6"
jupyterlab = "^3.0.12"
ipython-sql = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
